--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -8,6 +8,19 @@ layout: default
 {% endfor %}
 </ul>
 
-<div id="tag-cloud">
-Tags: {{ site | tag_cloud }}
-</div>
+<h3>Outras Tags</h3>
+
+{% capture site_tags %}{% for tag in site.tags %}{{ tag | first | downcase }}#{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% assign tag_hashes = site_tags | split:',' | sort %}
+<ul class="list-group">
+{% for hash in tag_hashes %}
+  {% assign keyValue = hash | split: '#' %}
+  {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
+  <li class="list-group-item">
+    <a href="/blog/tag/{{ tag_word | downcase }}.html">
+      {{ tag_word }}
+    </a>
+    <span class="badge pull-right">( {{ site.tags[tag_word].size }} )</span>
+  </li>
+{% endfor %}
+</ul>
