--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,7 +1,17 @@
-<div class="share-page">
-    Compartilhar [
-    <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ site.baseurl }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank">Twitter</a> | 
-    <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}" rel="nofollow" target="_blank">Facebook</a> |
-    <a href="https://plus.google.com/share?url={{ site.url }}{{ site.baseurl}}{{ page.url }}" rel="nofollow" target="_blank">Google+</a> |
-    <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ page.url }}&title={{ page.title }}&summary={{ page.summary }}&source=http://adamatti.github.io/blog">Linkedin</a> ]
+<div id="socialicons">
+    <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ site.baseurl }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank">
+       <i class="fa fa-twitter"></i>
+    </a>
+    <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}" rel="nofollow" target="_blank">
+        <i class="fa fa-facebook"></i>
+    </a>
+    <a href="https://plus.google.com/share?url={{ site.url }}{{ site.baseurl}}{{ page.url }}" rel="nofollow" target="_blank">
+        <i class="fa fa-google"></i>
+    </a>
+    <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ page.url }}&title={{ page.title }}&summary={{ page.summary }}&source=http://adamatti.github.io/blog" rel="nofollow" target="_blank">
+        <i class="fa fa-linkedin"></i>
+    </a>
+    <a href="mailto:adamatti@gmail.com?subject={{ page.title }}" rel="nofollow" target="_blank">
+        <i class="fa fa-envelope"></i>
+    </a>
 </div>
