--- a/_includes/share.html
+++ b/_includes/share.html
@@ -8,7 +8,7 @@
     <a href="https://plus.google.com/share?url={{ site.url }}{{ site.baseurl}}{{ page.url }}" rel="nofollow" target="_blank">
         <i class="fa fa-google"></i>
     </a>
-    <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ page.url }}&title={{ page.title }}&summary={{ page.summary }}&source=http://adamatti.github.io/blog" rel="nofollow" target="_blank">
+    <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ page.url }}&title={{ page.title }}&summary={{ page.summary }}&source=http://adamatti.github.io{{ site.baseurl }}" rel="nofollow" target="_blank">
         <i class="fa fa-linkedin"></i>
     </a>
     <a href="mailto:adamatti@gmail.com?subject={{ page.title }}" rel="nofollow" target="_blank">
